# ktracker

./: Cargo.toml  setup.sh  tests.rest
.github/workflows/: main.yml
frontend/: package-lock.json  package.json  size-plugin.json
frontend/src/: conf.js  header.css  index.js  logreg.css  manifest.json  overview.css  style.css  style.sass
frontend/src/components/: Error404.js  about.js  authenticatedRoute.js  footer.js  header.js  highscore.js  login.js  overview.js  register.js
frontend/src/services/: api_url.js  auth-header.js  auth.service.js  user.service.js
src/: auth.rs  main.rs  models.rs
src/db/: database.rs
src/db/migrations/: 1_setup.sql
src/http/: authorize.rs  create_entry.rs  create_user.rs  error.rs  get_meters.rs  highscore.rs  mod.rs
