[package]
name = "ktracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.15", features = ["headers"] }
axum-extra = { version = "0.3.7", features = ["spa"] }
headers = "0.3.7"
jsonwebtoken = "8.1.1"
once_cell = "1.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "sqlite" ] }
bcrypt = "0.13"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }
